found the spacing bug

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,3 +1,8 @@
+.teste {
+  background-color: blue;
+  margin: 0;
+}
+
 .container {
   background-color: aqua;
   margin: 0;
